完善主要功能